| Bug #21610 | Loaded engine does not load after restart. | ||
|---|---|---|---|
| Submitted: | 13 Aug 2006 6:56 | Modified: | 5 Oct 2006 16:01 |
| Reporter: | Brian Aker | Email Updates: | |
| Status: | Closed | ||
| Category: | Server | Severity: | S1 (Critical) |
| Version: | 5.1.12-beta-debug | OS: | |
| Assigned to: | Antony Curtis | Target Version: | |
[13 Aug 2006 6:56]
Brian Aker
[28 Aug 2006 12:45]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/commits/10922 ChangeSet@1.2278, 2006-08-28 05:45:22-07:00, acurtis@xiphis.org +1 -0 Bug#21610 "Loaded engine does not load after restart." Junk characters caused plugin load to fail silently.
[25 Sep 2006 18:00]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/commits/12489 ChangeSet@1.2339, 2006-09-25 10:59:49-07:00, acurtis@xiphis.org +1 -0 Bug#21610 "Loaded engine does not load after restart." Junk characters caused plugin load to fail silently.
[25 Sep 2006 18:01]
Antony Curtis
pushed to mysql-5.1-engines tree
[3 Oct 2006 8:51]
Sergey Vojtovich
Fixed in 5.1.12.
[5 Oct 2006 16:01]
Paul DuBois
Noted in 5.1.12 changelog. A loaded storage engine plugin did not load after a server restart.
