Bug#21610   "Loaded engine does not load after restart."   Junk characters caused plugin load to fail silently.

sql/sql_plugin.cc:
  junk characters cause plugin load to fail.
  eliminate use of strlen().